feat: added campaing detail, edit, delete, subscribe and unsubscribe API
