# src/api/v1/campaign/controller/findSingItem.ts
@@ -3,20 +3,24 @@ import { NextFunction, Request, RequestHandler, Response } from "express";
 import { catchAsync } from "../../../../utils/catchAsync";
 import campaignService from "../../../../lib/campaign";
 import { sendResponse } from "../../../../utils/sendResponse";
+import mongose, { ObjectId } from "mongoose";
+import mongoose from "mongoose";
 
-export const create: RequestHandler = catchAsync(
+export const findSingItem: RequestHandler = catchAsync(
 	async (req: Request, res: Response, next: NextFunction) => {
-		const { title, description, isActive } = req.body;
+		const { campaignId } = req.params;
 
-		const campaign = await campaignService.create(title, description, isActive);
+		const campaignObjectId = campaignId as unknown as ObjectId;
+		const campaign = await campaignService.findSingleItem(campaignObjectId);
+
+		const links = {
+			self: `/campaigns/${campaign.id}`,
+		};
 
 		const response = {
-			code: httpStatus.CREATED,
-			message: "Campaign Created Successfully",
+			code: httpStatus.OK,
 			data: campaign,
-			links: {
-				self: `/campaigns/${campaign?.id}`,
-			},
+			links,
 		};
 
 		sendResponse(res, response);
