# src/api/v1/campaign/controller/removeItem.ts
@@ -4,19 +4,14 @@ import { catchAsync } from "../../../../utils/catchAsync";
 import campaignService from "../../../../lib/campaign";
 import { sendResponse } from "../../../../utils/sendResponse";
 
-export const create: RequestHandler = catchAsync(
+export const removeItem: RequestHandler = catchAsync(
 	async (req: Request, res: Response, next: NextFunction) => {
-		const { title, description, isActive } = req.body;
+		const { campaignId } = req.params;
 
-		const campaign = await campaignService.create(title, description, isActive);
+		await campaignService.removeItem(campaignId);
 
 		const response = {
-			code: httpStatus.CREATED,
-			message: "Campaign Created Successfully",
-			data: campaign,
-			links: {
-				self: `/campaigns/${campaign?.id}`,
-			},
+			code: httpStatus.NO_CONTENT,
 		};
 
 		sendResponse(res, response);
