# src/model/Subscription.ts
@@ -1,28 +1,47 @@
-import mongoose, { Document, Schema } from "mongoose";
+import mongoose, { Document, Model, Schema } from "mongoose";
+import { ObjectType } from "typescript";
 
-// Define the Subscription schema
-const subscriptionSchema = new Schema({
-	email: {
-		type: String,
-		required: true,
-		trim: true,
-		lowercase: true,
-	},
-	campaignId: {
-		type: Schema.Types.ObjectId,
-		ref: "Campaign",
-		required: true,
-	},
-});
-
-// Define the Subscription document interface
-interface SubscriptionDocument extends Document {
+export type ISubscription = {
+	id: ObjectType;
 	email: string;
-	campaignId: mongoose.Types.ObjectId;
-}
+	campaign: string;
+};
 
-// Create the Subscription model
-const Subscription = mongoose.model<SubscriptionDocument>(
+export type ISubscriptionMethods = object;
+
+export type SubscriptionModel = Model<
+	ISubscription,
+	object,
+	ISubscriptionMethods
+>;
+
+const subscriptionSchema = new Schema(
+	{
+		email: {
+			type: String,
+			required: true,
+			trim: true,
+			lowercase: true,
+		},
+		campaign: {
+			type: Schema.Types.ObjectId,
+			ref: "Campaign",
+			required: true,
+		},
+	},
+	{
+		toJSON: {
+			virtuals: true,
+			transform: (doc, ret) => {
+				ret.id = doc._id;
+				delete ret._id;
+				delete ret.__v;
+			},
+		},
+	}
+);
+
+const Subscription = mongoose.model<ISubscription, SubscriptionModel>(
 	"Subscription",
 	subscriptionSchema
 );
